Implement getWorkflowOverviewById (v2)
