# plugins/orchestrator-backend/src/service/handlers.ts
@@ -1,4 +1,7 @@
-import { WorkflowOverviewListResultDTO } from '@janus-idp/backstage-plugin-orchestrator-common';
+import {
+  WorkflowOverviewDTO,
+  WorkflowOverviewListResultDTO,
+} from '@janus-idp/backstage-plugin-orchestrator-common';
 
 import { SonataFlowService } from './SonataFlowService';
 
@@ -20,4 +23,16 @@ export async function getWorkflowOverview(
     },
   };
   return result;
+}
+
+export async function getWorkflowOverviewById(
+  sonataFlowService: SonataFlowService,
+  workflowId: string,
+): Promise<WorkflowOverviewDTO> {
+  const overviewObj = await sonataFlowService.fetchWorkflowOverview(workflowId);
+
+  if (!overviewObj) {
+    throw new Error(`Couldn't fetch workflow overview for ${workflowId}`);
+  }
+  return overviewObj;
 }
